# game-logic-for-brogue-android-port

./: .gitignore  CMakeLists.txt  Makefile  README.md  version_name
include/: IncludeGlobals.h  PlatformDefines.h  Rogue.h  platform.h
src/brogue/: Architect.c  Globals.c  Grid.c  IO.c  Items.c  MainMenu.c  Movement.c  RogueMain.c  platformdependent.c
src/platform/: curses-platform.c  main.c  tcod-platform.c  test-platform.c
